// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewProjectArea renders correctly without projects and with credit card 1`] = `
<div class="new-project-container">
  <div id="newProjectButton" class="new-project-button-container">
    <h1 class="new-project-button-container__label">+ Create Project</h1>
  </div>
</div>
`;

exports[`NewProjectArea renders correctly without projects and with credit card 2`] = `
<div class="new-project-container">
  <div id="newProjectButton" class="new-project-button-container">
    <h1 class="new-project-button-container__label">+ Create Project</h1>
  </div>
</div>
`;

exports[`NewProjectArea renders correctly without projects and without payment methods 1`] = `
<div class="new-project-container">
  <!---->
</div>
`;
